@@ -1,4 +1,7 @@
 Ctrlproxy 2.7:
+ * Support multiple processes
+ * Add cisg utility
+ * Update items kept track of by stats by default
  * Put some modules in their own directory
  * Add report_time
  * Add linestack_file
